[package]
name = "skippy"
version = "0.0.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
haphazard = { git = "https://github.com/emilHof/haphazard", version = "0.1.5" }

[dev-dependencies]
crossbeam-skiplist = "0.1"
