[package]
name = "skippy-rs"
version = "0.0.0-alpha.3"
edition = "2021"
authors = ["Emil Hofstetter <emil.k.hofstetter@gmail.com>"]
repository = "https://github.com/emilhof/skippy"
license-file  = "LICENSE.txt"
keywords = ["skiplist", "lock-free", "mutli-threading", "concurrency"]
description = "A set of lock free, thread safe, and fast data structures implemented via a Skip List"

[dependencies]
rand = "0.8.5"
haphazard = "0.1"

[dev-dependencies]
crossbeam-skiplist = "0.1"
